# transformer-evolution

./: .agents.yml  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: free_transformer_alt.yaml  hierarchical_route.yaml  nanogpt_depth.yaml  nanogpt_gqa.yaml  recurrence_stack.yaml  transformer_vaswani_big.yaml  transformer_vaswani_small.yaml
docs/: dsl_capabilities.md  lineage_focus.json  results_index.json  transformer_subway.mmd
examples/: free_transformer.yaml  free_transformer_pipeline.yaml  hierarchical.yaml  latent.yaml  linformer.yaml  mixture_depth.yaml  mla.yaml  nanogpt_tiny.yaml  performer.yaml  pipeline_recurrence.yaml  plain.yaml  recurrence.yaml  residual_dual.yaml  retnet.yaml  ring_attention.yaml  route.yaml  transformer_vaswani.yaml
runners/: run_evolution.py  run_experiment.py  run_search.py  train_tiny.py  validate.py
scripts/: index_results.py  lineage_focus.py  lineage_to_mermaid.py  prune_results.py  reconstruct_lineage.py
src/evoforge/: __init__.py
src/evoforge/builders/: __init__.py  pipeline_torch.py  simple_torch.py  utils.py
src/evoforge/data/: __init__.py  tiny.py
src/evoforge/dsl/: api.py  errors.py  models.py  mutations.py  schema.py  validators.py
src/evoforge/eval/: shocks.py
src/evoforge/ir/: types.py
src/evoforge/search/: __init__.py  asha.py  evolution.py  novelty.py  pdh.py  runner.py
tests/: test_dsl_valid.py  test_evolution.py  test_mutations.py  test_pipeline_builder.py  test_search_runner.py  test_simple_builder.py  test_simple_trainer.py
(+2 files in other folders)
